--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tinymce/tinymce-vue": "^4.0.7",
     "@vuepic/vue-datepicker": "^3.6.4",
     "axios": "^1.2.2",
     "core-js": "^3.8.3",
